--- a/src/sharedComponents/footer/footer.component.scss
+++ b/src/sharedComponents/footer/footer.component.scss
@@ -7,6 +7,7 @@
 
 .footer-content {
     width: 15%;
+    min-width: 180px;
 }
 
 .list-content {
@@ -16,4 +17,76 @@
 
 .list-content:hover {
     color: rgb(119, 119, 219);
+}
+
+.footer-content input {
+  width: 100%;
+  padding: 10px 5px;
+  border: none;
+  border-bottom: 1px solid #aaa;
+  background: transparent;
+  color: #fff;
+  margin-bottom: 20px;
+  outline: none;
+  font-size: 14px;
+}
+
+.footer-content input::placeholder {
+  color: #aaa;
+}
+
+.footer-content button {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 25px;
+  background-color: rgb(106, 120, 240);
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.footer-content button:hover {
+  background-color: #f9f9ff;
+  color: rgb(132, 130, 238);
+  transition: background 0.3s, color 0.3s;
+}
+
+.social-icons {
+  display: flex;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.social-icons i {
+  font-size: 24px;
+  color: #fff;
+  transition: color 0.3s ease, transform 0.3s ease;
+  cursor: pointer;
+}
+
+.social-icons i:hover {
+  color: rgb(132, 130, 238);
+}
+
+.address {
+  color: #aaa;
+  margin: 10px 0;
+}
+
+.footer-bottom {
+  background: #1c1c1c;  
+  padding: 20px 0;
+  text-align: center;
+  color: #aaa;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+}
+
+.payment-icons{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
