--- a/src/sharedComponents/header/header.component.html
+++ b/src/sharedComponents/header/header.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <!-- Right -->
-    <div class="d-flex align-items-center">
+<div class="d-flex align-items-center gap-4">
       <!-- Search -->
       <button class="btn btn-link text-dark me-3 p-0" type="button">
         <i class="fas fa-search fs-5"></i>
