--- a/src/components/home/home.component.scss
+++ b/src/components/home/home.component.scss
@@ -1,11 +1,16 @@
-.nav-links a {
-      text-decoration: none;
-      color: #333;
-      margin-right: 20px;
-      font-size: 15px;
-    }
-    .nav-links a.active {
-      border-bottom: 2px solid #000;
-      padding-bottom: 4px;
-      font-weight: 500;
-    }
+.nav-links span {
+  text-decoration: none;
+  color: #333;
+  padding-bottom: 4px;
+  cursor: pointer;      
+  transition: 0.2s;
+}
+
+.nav-links span:hover {
+  color: #474444;
+}
+
+.nav-links span.active {
+  font-weight: bold;
+  border-bottom: 2px solid rgb(132, 129, 129);
+}
