update about and contact screen

--- a/src/sharedComponents/header/header.component.html
+++ b/src/sharedComponents/header/header.component.html
@@ -18,11 +18,9 @@
     <div class="d-flex align-items-center">
       <div class="fw-bold me-4">COZA STORE</div>
       <ul class="nav">
-        <li class="nav-item"><a href="#" class="nav-link text-dark">Home <span class="badge bg-danger ms-1">HOT</span></a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-dark">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-dark">Blog</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-dark">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-dark">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link text-dark">Shop <span class="badge bg-danger ms-1">HOT</span></a></li>
+        <li class="nav-item"><a href="/about" class="nav-link text-dark">About</a></li>
+        <li class="nav-item"><a href="/contact" class="nav-link text-dark">Contact</a></li>
       </ul>
     </div>
 
