quick view add to card worked

--- a/src/components/product-card/product-card.component.html
+++ b/src/components/product-card/product-card.component.html
@@ -9,7 +9,7 @@
     />
 
     <!-- Quick View Button -->
-    <button class="btn quick-view-btn">Quick View</button>
+    <button class="btn quick-view-btn" (click)="openQuickView(products)">Quick View</button>
   </div>
 
   <!-- Product Details -->
