--- a/src/sharedComponents/header/header.component.html
+++ b/src/sharedComponents/header/header.component.html
@@ -27,7 +27,7 @@
     <!-- Right -->
 <div class="d-flex align-items-center gap-4">
       <!-- Cart -->
-      <button class="btn btn-link text-dark me-3 p-0 position-relative" type="button">
+      <button class="btn btn-link text-dark me-3 p-0 position-relative shadow-none" type="button" (click)="openCart()">
         <i class="fas fa-shopping-cart fs-5"></i>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary" style="font-size:0.7rem;">
           {{cartItemCount}}
