--- a/src/components/product-card/product-card.component.scss
+++ b/src/components/product-card/product-card.component.scss
@@ -1,9 +1,9 @@
 .quick-view-btn {
+  opacity: 0;
+  font-size: 0.9rem;
   position: absolute;
   left: 50%;
-  bottom: -60px;
   transform: translateX(-50%);
-  opacity: 0;
   background-color: #fff;
   color: #000;
   transition: all 0.4s ease;
@@ -13,7 +13,6 @@
 }
 
 .position-relative:hover .quick-view-btn {
-  bottom: 20px;
   opacity: 1;
 }
 
@@ -22,3 +21,15 @@
   color: #fff;
 }
 
+
+.product-image:hover .quick-view-btn {
+  opacity: 1;
+}
+
+.product-image img {
+  transition: transform 0.4s ease-in-out;
+}
+
+.product-image:hover img {
+  transform: scale(1.05);
+}
