--- a/src/components/quickview/quickview.component.scss
+++ b/src/components/quickview/quickview.component.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  animation: fadeInPopup 0.5s ease, fadeOutPopup 0.5s ease 2.5s forwards;
+  animation: fadeInPopup 0.5s ease;
   z-index: 2000;
 }
 
@@ -62,8 +62,4 @@
 @keyframes fadeInPopup {
   from { opacity: 0; transform: translate(-50%, -60%); }
   to { opacity: 1; transform: translate(-50%, -50%); }
-}
-
-@keyframes fadeOutPopup {
-  to { opacity: 0; transform: translate(-50%, -50%); }
 }
