--- a/src/sharedComponents/header/header.component.html
+++ b/src/sharedComponents/header/header.component.html
@@ -1,43 +1,75 @@
 <nav class="border-top border-bottom">
   <!-- Top bar -->
-  <div class="d-flex justify-content-around align-items-center bg-dark text-secondary small py-1">
-    <div>
-      Free shipping for standard order over $100
-    </div>
+  <div
+    class="d-flex justify-content-around align-items-center bg-dark text-secondary small py-1"
+  >
+    <div>Free shipping for standard order over $100</div>
     <ul class="nav">
-      <li class="nav-item"><a href="#" class="nav-link text-secondary px-2">Help & FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link text-secondary px-2">My Account</a></li>
-      <li class="nav-item"><a href="#" class="nav-link text-secondary px-2">EN</a></li>
-      <li class="nav-item"><a href="#" class="nav-link text-secondary px-2">USD</a></li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary px-2">Help & FAQs</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary px-2">My Account</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary px-2">EN</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary px-2">USD</a>
+      </li>
     </ul>
   </div>
 
   <!-- Bottom bar -->
-  <div class="d-flex justify-content-around align-items-center bg-white text-dark py-2">
+  <div
+    class="d-flex justify-content-around align-items-center bg-white text-dark py-2"
+  >
     <!-- Left -->
     <div class="d-flex align-items-center">
       <div class="fw-bold me-4">COZA STORE</div>
       <ul class="nav">
-        <li class="nav-item"><a href="#" class="nav-link text-dark">Shop <span class="badge bg-danger ms-1">HOT</span></a></li>
-        <li class="nav-item"><a href="/about" class="nav-link text-dark">About</a></li>
-        <li class="nav-item"><a href="/contact" class="nav-link text-dark">Contact</a></li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-dark"
+            >Shop <span class="badge bg-danger ms-1">HOT</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="/about" class="nav-link text-dark">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="/contact" class="nav-link text-dark">Contact</a>
+        </li>
       </ul>
     </div>
 
     <!-- Right -->
-<div class="d-flex align-items-center gap-4">
+    <div class="d-flex align-items-center gap-4">
       <!-- Cart -->
-      <button class="btn btn-link text-dark me-3 p-0 position-relative shadow-none" type="button" (click)="openCart()">
+      <button
+        class="btn btn-link text-dark me-3 p-0 position-relative shadow-none"
+        type="button"
+        (click)="openCart()"
+      >
         <i class="fas fa-shopping-cart fs-5"></i>
-        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary" style="font-size:0.7rem;">
-          {{cartItemCount}}
+        <span
+          class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary"
+          style="font-size: 0.7rem"
+        >
+          {{ cartItemCount }}
         </span>
       </button>
       <!-- Wishlist -->
-      <button class="btn btn-link text-dark p-0 position-relative" type="button">
+      <button
+        class="btn btn-link text-dark p-0 position-relative"
+        type="button"
+        (click)="openWishlist()"
+      >
         <i class="far fa-heart fs-5"></i>
-        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary" style="font-size:0.7rem;">
-          {{wishlistCount}}
+        <span
+          class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary"
+          style="font-size: 0.7rem"
+        >
+          {{ wishlistCount }}
         </span>
       </button>
     </div>
