router modules implements

--- a/src/sharedComponents/header/header.component.html
+++ b/src/sharedComponents/header/header.component.html
@@ -6,16 +6,16 @@
     <div>Free shipping for standard order over $100</div>
     <ul class="nav">
       <li class="nav-item">
-        <a href="#" class="nav-link text-secondary px-2">Help & FAQs</a>
+        <a class="nav-link text-secondary px-2">Help & FAQs</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link text-secondary px-2">My Account</a>
+        <a  class="nav-link text-secondary px-2">My Account</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link text-secondary px-2">EN</a>
+        <a class="nav-link text-secondary px-2">EN</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link text-secondary px-2">USD</a>
+        <a  class="nav-link text-secondary px-2">USD</a>
       </li>
     </ul>
   </div>
@@ -29,15 +29,15 @@
       <div class="fw-bold me-4">COZA STORE</div>
       <ul class="nav">
         <li class="nav-item">
-          <a href="#" class="nav-link text-dark"
+          <a routerLink="/shop" class="nav-link text-dark"
             >Shop <span class="badge bg-danger ms-1">HOT</span></a
           >
         </li>
         <li class="nav-item">
-          <a href="/about" class="nav-link text-dark">About</a>
+          <a routerLink="/about" class="nav-link text-dark">About</a>
         </li>
         <li class="nav-item">
-          <a href="/contact" class="nav-link text-dark">Contact</a>
+          <a routerLink="/contact" class="nav-link text-dark">Contact</a>
         </li>
       </ul>
     </div>
