added changes in pop up and payment

--- a/src/components/cart-totals/cart-totals.component.html
+++ b/src/components/cart-totals/cart-totals.component.html
@@ -61,8 +61,8 @@
                 <!-- Checkout Button -->
                 <div class="d-flex justify-content-center">
                     <button class="btn btn-light w-100 text-uppercase px-4 py-2 rounded-pill"
-                        style="height: 50px; font-size: 15px;" (click)="proceedToCheckout()">
-                        Proceed to Checkout
+                        style="height: 50px; font-size: 15px;" (click)="proceedToPay()">
+                        Proceed to Pay
                     </button>
                 </div>
             </div>
