--- a/src/components/cart-details/cart-details.component.html
+++ b/src/components/cart-details/cart-details.component.html
@@ -41,7 +41,7 @@
   <div class="cart-total fw-bold mb-3">Total: {{ getTotal() | currency }}</div>
 
     <div class="cart-buttons d-flex">
-        <a routerLink="/cart"(click)="viewCart()" class="btn btn-dark flex-fill me-2">View Cart</a>
+        <a (click)="viewCart()" class="btn btn-dark flex-fill me-2">View Cart</a>
         <a routerLink="/checkout" class="btn btn-primary flex-fill">Check Out</a>
     </div>
 
