--- a/src/components/quickview/quickview.component.html
+++ b/src/components/quickview/quickview.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header border-0">
   <h5 class="modal-title">{{ product.productName }}</h5>
-  <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="activeModal.dismiss()"></button>
+  <button type="button" class="btn-close shadow-none" data-bs-dismiss="modal" (click)="activeModal.dismiss()"></button>
 </div>
 
 <div class="modal-body row">
@@ -47,15 +47,4 @@
       </button>
     </div>
   </div>
-</div>
-
-<div *ngIf="showSuccessPopup" class="success-popup">
-  <div class="tick-container">
-    <svg class="tick-svg" viewBox="0 0 52 52">
-      <circle class="tick-circle" cx="26" cy="26" r="25" fill="none" />
-      <path class="tick-check" fill="none" d="M14 27 l10 10 l20 -20" />
-    </svg>
-  </div>
-  <div class="success-message">{{ successMessage }}</div>
-  <button class="btn btn-primary mt-3" (click)="closePopup()">OK</button>
 </div>
