--- a/src/sharedComponents/header/header.component.html
+++ b/src/sharedComponents/header/header.component.html
@@ -29,7 +29,7 @@
       <div class="fw-bold me-4">COZA STORE</div>
       <ul class="nav">
         <li class="nav-item">
-          <a routerLink="/shop" class="nav-link text-dark"
+          <a routerLink="/home" class="nav-link text-dark"
             >Shop <span class="badge bg-danger ms-1">HOT</span></a
           >
         </li>
