--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 
 /* Importing Bootstrap SCSS file. */
 @use 'bootstrap/scss/bootstrap';
+
+// Set Inter as the default font
+body, html {
+	font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
